# ComfyUI_UltimateSDUpscaleGuider

./: README.md  nodes.py  pyproject.toml  usdu_nodes.py  usdu_patch.py  usdu_utils.py
.github/workflows/: publish.yml
modules/: processing.py
test/: conftest.py  test_controlnet.py  test_main_workflow.py  test_settings.py  test_tiling_modes.py
