[project]
name = "comfyui-ultimatesdupscale-guider"
description = "ComfyUI nodes for Ultimate SD Upscale with Guider support for custom guiders like PerpNegGuider. Fork of ComfyUI_UltimateSDUpscale."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Blakeem/ComfyUI_UltimateSDUpscaleGuider"

[tool.comfy]
PublisherId = "blake"
DisplayName = "Ultimate SD Upscale (Guider)"
Icon = ""
