[project]
name = "comfyui-ultimatesdupscale-guider"
description = "ComfyUI nodes for Ultimate SD Upscale with Guider support and Context Only Overlap mode for seamless tiled upscaling without blur. Fork of ComfyUI_UltimateSDUpscale."
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Blakeem/ComfyUI_UltimateSDUpscaleGuider"

[tool.comfy]
PublisherId = "blake"
DisplayName = "Ultimate SD Upscale (Guider)"
Icon = ""
